fix: update z-index in ffmi-balance.module.css

--- a/src/components/ui/ffmi-balance/ffmi-balance.module.css
+++ b/src/components/ui/ffmi-balance/ffmi-balance.module.css
@@ -69,7 +69,7 @@
 .meter::after {
   content: "";
   position: absolute;
-  z-index: 9999;
+  z-index: 1;
   top: 4px;
   left: var(--indicator-position, 0%);
   transform: translate(-50%, -50%);
@@ -82,7 +82,7 @@
 .meter::before {
   content: "";
   position: absolute;
-  z-index: 9998;
+  z-index: 1;
   top: 4px;
   left: var(--indicator-position, 0%);
   transform: translate(-50%, -50%);
